@@ -30,7 +30,7 @@ import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.io.StringWriter;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.Random;
 
 import javax.jcr.AccessDeniedException;
@@ -60,7 +60,7 @@ import org.junit.runners.Parameterized;
 /**
  * Integration test for direct binary GET/PUT via HTTP, that requires a fully working data store
  * (such as S3) for each {@link AbstractHttpBinaryIT#dataStoreFixtures() configured fixture}.
- * The data store in question must support direct GET/PUT access via a URL.
+ * The data store in question must support direct GET/PUT access via a URI.
  * 
  * Data store must be configured through e.g. aws.properties.
  *
@@ -104,9 +104,9 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     // F1 - basic test
     @Test
     public void testUpload() throws Exception {
-        // enable writable URL feature
+        // enable writable URI feature
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
 
         final String content = getRandomString(256);
         final long size = content.getBytes("utf-8").length;
@@ -119,13 +119,13 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         // very small test binary
         assertTrue(size < upload.getMaxPartSize());
 
-        URL url = upload.getURLs().iterator().next();
-        assertNotNull(url);
+        URI uri = upload.getURIs().iterator().next();
+        assertNotNull(uri);
 
-        LOG.info("- uploading binary via PUT to {}", url.toString());
-        int code = httpPut(url, content.getBytes().length, getTestInputStream(content));
+        LOG.info("- uploading binary via PUT to {}", uri.toString());
+        int code = httpPut(uri, content.getBytes().length, getTestInputStream(content));
 
-        assertTrue("PUT to pre-signed S3 URL failed",
+        assertTrue("PUT to pre-signed S3 URI failed",
                 isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
 
         Binary writeBinary = uploadProvider.completeBinaryUpload(upload.getUploadToken());
@@ -141,7 +141,7 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     @Test
     public void testMultiPartUpload() throws Exception {
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
 
         assertTrue(adminSession.getValueFactory() instanceof JackrabbitValueFactory);
 
@@ -153,9 +153,9 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         String buffer = getRandomString(uploadSize);
         long uploadPartSize = upload.getMaxPartSize();
         long remaining = uploadSize;
-        for (URL url : upload.getURLs()) {
+        for (URI uri : upload.getURIs()) {
             String nextPart = buffer.substring(0, (int) Math.min(uploadPartSize, remaining));
-            int code = httpPut(url,
+            int code = httpPut(uri,
                     nextPart.getBytes().length,
                     new ByteArrayInputStream(nextPart.getBytes()),
                     true);
@@ -175,15 +175,15 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
 
     // F8 - test reading getBinary().getInputStream() once uploaded
     @Test
-    public void testStreamBinaryThroughJCRAfterURLWrite() throws Exception {
-        // enable writable URL feature
+    public void testStreamBinaryThroughJCRAfterURIWrite() throws Exception {
+        // enable writable URI feature
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
 
         // 1. add binary and upload
         String content = getRandomString(256);
         BinaryDirectUpload upload = uploadProvider.initiateBinaryUpload(content.getBytes().length, 10);
-        int code = httpPut(upload.getURLs().iterator().next(),
+        int code = httpPut(upload.getURIs().iterator().next(),
                 content.getBytes().length,
                 new ByteArrayInputStream(content.getBytes()));
         assertTrue(isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
@@ -202,7 +202,7 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     @Test
     public void testGetBinary() throws Exception {
         getConfigurableHttpDataRecordProvider()
-                .setHttpDownloadURLExpirySeconds(REGULAR_READ_EXPIRY);
+                .setHttpDownloadURIExpirySeconds(REGULAR_READ_EXPIRY);
 
         // Must be larger than the minimum file size, to keep it from being inlined in the node store.
         String content = getRandomString(1024*20);
@@ -212,42 +212,42 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
 
         Assert.assertTrue(writeBinary instanceof BinaryDirectDownload);
 
-        URL downloadURL = ((BinaryDirectDownload) writeBinary).getURL();
+        URI downloadURI = ((BinaryDirectDownload) writeBinary).getURI();
         StringWriter writer = new StringWriter();
-        IOUtils.copy(httpGet(downloadURL), writer, "utf-8");
+        IOUtils.copy(httpGet(downloadURI), writer, "utf-8");
         assertEquals(content, writer.toString());
     }
 
     // F9 - GET Binary for binary after write using direct PUT
     @Test
     public void testGetBinaryAfterPut() throws Exception {
-        // enable writable and readable URL feature
+        // enable writable and readable URI feature
         ConfigurableDataRecordDirectAccessProvider provider = getConfigurableHttpDataRecordProvider();
-        provider.setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
-        provider.setHttpDownloadURLExpirySeconds(REGULAR_READ_EXPIRY);
+        provider.setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
+        provider.setHttpDownloadURIExpirySeconds(REGULAR_READ_EXPIRY);
 
         // 1. add binary and upload
         String content = getRandomString(256);
         BinaryDirectUpload upload = uploadProvider.initiateBinaryUpload(content.getBytes().length, 10);
-        int code = httpPut(upload.getURLs().iterator().next(),
+        int code = httpPut(upload.getURIs().iterator().next(),
                 content.getBytes().length,
                 new ByteArrayInputStream(content.getBytes()));
         assertTrue(isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
         Binary writeBinary = uploadProvider.completeBinaryUpload(upload.getUploadToken());
 
-        // 2. read binary, get the URL
-        URL downloadURL = ((BinaryDirectDownload)(writeBinary)).getURL();
+        // 2. read binary, get the URI
+        URI downloadURI = ((BinaryDirectDownload)(writeBinary)).getURI();
         StringWriter writer = new StringWriter();
-        IOUtils.copy(httpGet(downloadURL), writer, "utf-8");
+        IOUtils.copy(httpGet(downloadURI), writer, "utf-8");
 
-        // 3. GET on URL and verify contents are the same
+        // 3. GET on URI and verify contents are the same
         assertEquals(content, writer.toString());
     }
 
     @Test
     public void testGetSmallBinaryReturnsNull() throws Exception {
         getConfigurableHttpDataRecordProvider()
-                .setHttpDownloadURLExpirySeconds(REGULAR_READ_EXPIRY);
+                .setHttpDownloadURIExpirySeconds(REGULAR_READ_EXPIRY);
 
         // Must be smaller than the minimum file size, (inlined binary)
         String content = getRandomString(256);
@@ -255,8 +255,8 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
 
         waitForUploads();
 
-        URL downloadURL = ((BinaryDirectDownload)(writeBinary)).getURL();
-        assertNull(downloadURL);
+        URI downloadURI = ((BinaryDirectDownload)(writeBinary)).getURI();
+        assertNull(downloadURI);
     }
 
     // A6 - Client MUST only get permission to add a blob referenced in a JCR binary property
@@ -264,9 +264,9 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     @Test
     @Ignore("OAK-7602")  // michid FIXME OAK-7602
     public void testUnprivilegedSessionCannotUploadBinary() throws Exception {
-        // enable writable URL feature
+        // enable writable URI feature
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
 
         try {
             anonymousUploadProvider.initiateBinaryUpload(1024*20, 10);
@@ -275,41 +275,41 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         catch (AccessDeniedException e) { }
     }
 
-    // A2 - disable write URLs entirely
+    // A2 - disable write URIs entirely
     @Test
     public void testDisableDirectHttpUpload() throws Exception {
         // disable in data store config by setting expiry to zero
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(0);
+                .setHttpUploadURIExpirySeconds(0);
 
         String content = getRandomString(256);
         BinaryDirectUpload upload = uploadProvider.initiateBinaryUpload(content.getBytes().length, 10);
 
         assertNotNull(upload);
-        assertFalse(upload.getURLs().iterator().hasNext());
+        assertFalse(upload.getURIs().iterator().hasNext());
     }
 
-    // A2 - disable get URLs entirely
+    // A2 - disable get URIs entirely
     @Test
     public void testDisableDirectHttpDownload() throws Exception {
         getConfigurableHttpDataRecordProvider()
-                .setHttpDownloadURLExpirySeconds(0);
+                .setHttpDownloadURIExpirySeconds(0);
 
         String content = getRandomString(1024*20);
         Binary writeBinary = createFileWithBinary(adminSession, FILE_PATH, new ByteArrayInputStream(content.getBytes()));
 
         waitForUploads();
 
-        URL downloadURL = ((BinaryDirectDownload)(writeBinary)).getURL();
-        assertNull(downloadURL);
+        URI downloadURI = ((BinaryDirectDownload)(writeBinary)).getURI();
+        assertNull(downloadURI);
     }
 
     // A2/A3 - configure short expiry time, wait, ensure upload fails after expired
     @Test
-    public void testPutURLExpires() throws Exception {
+    public void testPutURIExpires() throws Exception {
         // short timeout
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(1);
+                .setHttpUploadURIExpirySeconds(1);
 
         String content = getRandomString(1024*20);
         BinaryDirectUpload upload = uploadProvider.initiateBinaryUpload(content.getBytes().length, 10);
@@ -318,7 +318,7 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         Thread.sleep(2 * SECONDS);
 
         // ensure PUT fails with 403 or anything 400+
-        assertTrue(httpPutTestStream(upload.getURLs().iterator().next()) > HttpURLConnection.HTTP_BAD_REQUEST);
+        assertTrue(httpPutTestStream(upload.getURIs().iterator().next()) > HttpURLConnection.HTTP_BAD_REQUEST);
     }
 
     // F2 - CDN & transfer accelerators (S3 only for now)
@@ -327,85 +327,85 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         ConfigurableDataRecordDirectAccessProvider provider = getConfigurableHttpDataRecordProvider();
         if (provider instanceof S3DataStore) {
             // This test is S3 specific for now
-            provider.setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
-            provider.setHttpDownloadURLExpirySeconds(REGULAR_READ_EXPIRY);
+            provider.setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
+            provider.setHttpDownloadURIExpirySeconds(REGULAR_READ_EXPIRY);
             provider.setBinaryTransferAccelerationEnabled(true);
 
             BinaryDirectUpload upload = uploadProvider.initiateBinaryUpload(1024 * 20, 1);
-            URL url = upload.getURLs().iterator().next();
-            assertNotNull(url);
+            URI uri = upload.getURIs().iterator().next();
+            assertNotNull(uri);
 
-            LOG.info("accelerated URL: {}", url.toString());
-            assertTrue(url.getHost().endsWith(".s3-accelerate.amazonaws.com"));
+            LOG.info("accelerated URI: {}", uri.toString());
+            assertTrue(uri.getHost().endsWith(".s3-accelerate.amazonaws.com"));
 
             provider.setBinaryTransferAccelerationEnabled(false);
             upload = uploadProvider.initiateBinaryUpload(1024*20, 1);
-            url = upload.getURLs().iterator().next();
-            assertNotNull(url);
+            uri = upload.getURIs().iterator().next();
+            assertNotNull(uri);
 
-            LOG.info("non-accelerated URL: {}", url.toString());
-            assertFalse(url.getHost().endsWith(".s3-accelerate.amazonaws.com"));
+            LOG.info("non-accelerated URI: {}", uri.toString());
+            assertFalse(uri.getHost().endsWith(".s3-accelerate.amazonaws.com"));
         }
     }
 
-    // A1 - get put url, change it and try uploading it
+    // A1 - get put URI, change it and try uploading it
     @Test
-    public void testModifiedPutURLFails() throws Exception {
-        // enable writable URL feature
+    public void testModifiedPutURIFails() throws Exception {
+        // enable writable URI feature
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
         String content = getRandomString(1024*20);
         BinaryDirectUpload upload = uploadProvider.initiateBinaryUpload(content.getBytes().length, 1);
-        URL url = upload.getURLs().iterator().next();
-        URL changedUrl = new URL(
-                String.format("%s://%s/%sX?%s",  // NOTE the injected "X" in the URL filename
-                url.getProtocol(),
-                url.getHost(),
-                url.getPath(),
-                url.getQuery())
+        URI uri = upload.getURIs().iterator().next();
+        URI changedURI = new URI(
+                String.format("%s://%s/%sX?%s",  // NOTE the injected "X" in the URI filename
+                uri.getScheme(),
+                uri.getHost(),
+                uri.getPath(),
+                uri.getQuery())
         );
-        int code = httpPut(changedUrl, content.getBytes().length, new ByteArrayInputStream(content.getBytes()));
+        int code = httpPut(changedURI, content.getBytes().length, new ByteArrayInputStream(content.getBytes()));
         assertTrue(isFailedHttpPut(code));
     }
 
-    // A1 - get put url, upload, then try reading from the same url
+    // A1 - get put URI, upload, then try reading from the same URI
     @Test
-    public void testCannotReadFromPutURL() throws Exception {
-        // enable writable URL and readable URL feature
+    public void testCannotReadFromPutURI() throws Exception {
+        // enable writable URI and readable URI feature
         ConfigurableDataRecordDirectAccessProvider provider = getConfigurableHttpDataRecordProvider();
-        provider.setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
-        provider.setHttpDownloadURLExpirySeconds(REGULAR_READ_EXPIRY);
+        provider.setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
+        provider.setHttpDownloadURIExpirySeconds(REGULAR_READ_EXPIRY);
 
         String content = getRandomString(1024*20);
         BinaryDirectUpload upload = uploadProvider.initiateBinaryUpload(content.getBytes().length, 1);
-        URL url = upload.getURLs().iterator().next();
-        int code = httpPut(url, content.getBytes().length, new ByteArrayInputStream(content.getBytes()));
+        URI uri = upload.getURIs().iterator().next();
+        int code = httpPut(uri, content.getBytes().length, new ByteArrayInputStream(content.getBytes()));
         assertTrue(isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
 
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+        HttpURLConnection conn = (HttpURLConnection) uri.toURL().openConnection();
         code = conn.getResponseCode();
         assertTrue(isFailedHttpPut(code));
     }
 
-    // A1 - add binary via JCR, then get put url, and modify to try to upload over first binary
+    // A1 - add binary via JCR, then get put URI, and modify to try to upload over first binary
     @Test
-    public void testCannotModifyExistingBinaryViaPutURL() throws Exception {
-        // enable writable URL and readable URL feature
+    public void testCannotModifyExistingBinaryViaPutURI() throws Exception {
+        // enable writable URI and readable URI feature
         ConfigurableDataRecordDirectAccessProvider provider = getConfigurableHttpDataRecordProvider();
-        provider.setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
-        provider.setHttpDownloadURLExpirySeconds(REGULAR_READ_EXPIRY);
+        provider.setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
+        provider.setHttpDownloadURIExpirySeconds(REGULAR_READ_EXPIRY);
 
         String content = getRandomString(1024*20);
         Binary writeBinary = createFileWithBinary(adminSession, FILE_PATH, new ByteArrayInputStream(content.getBytes()));
 
         waitForUploads();
 
-        URL downloadURL = ((BinaryDirectDownload)(writeBinary)).getURL();
-        assertNotNull(downloadURL);
+        URI downloadURI = ((BinaryDirectDownload)(writeBinary)).getURI();
+        assertNotNull(downloadURI);
 
         String moreContent = getRandomString(1024*20);
         BinaryDirectUpload upload = uploadProvider.initiateBinaryUpload(moreContent.getBytes().length, 1);
-        HttpURLConnection conn = (HttpURLConnection) downloadURL.openConnection();
+        HttpURLConnection conn = (HttpURLConnection) downloadURI.toURL().openConnection();
         conn.setRequestMethod("PUT");
         conn.setDoOutput(true);
         IOUtils.copy(new ByteArrayInputStream(moreContent.getBytes()), conn.getOutputStream());
@@ -414,21 +414,21 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         assertTrue(isFailedHttpPut(code));
 
         StringWriter writer = new StringWriter();
-        IOUtils.copy(httpGet(downloadURL), writer, "utf-8");
+        IOUtils.copy(httpGet(downloadURI), writer, "utf-8");
         assertEquals(content, writer.toString());
     }
 
     // D1 - immutable after initial upload
     @Test
     public void testUploadedBinaryIsImmutable() throws Exception {
-        // enable writable URL feature
+        // enable writable URI feature
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
         String content = getRandomString(1024*20);
 
         BinaryDirectUpload upload = uploadProvider.initiateBinaryUpload(content.getBytes().length, 1);
         assertNotNull(upload);
-        int code = httpPut(upload.getURLs().iterator().next(),
+        int code = httpPut(upload.getURIs().iterator().next(),
                 content.getBytes().length,
                 new ByteArrayInputStream(content.getBytes()));
         assertTrue(isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
@@ -440,7 +440,7 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         String moreContent = getRandomString(1024*21);
         upload = uploadProvider.initiateBinaryUpload(moreContent.getBytes().length, 1);
         assertNotNull(upload);
-        code = httpPut(upload.getURLs().iterator().next(),
+        code = httpPut(upload.getURIs().iterator().next(),
                 content.getBytes().length,
                 new ByteArrayInputStream(moreContent.getBytes()));
         assertTrue(isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
@@ -460,7 +460,7 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         // Every upload destination should be unique with no regard to file content
         // The content is not read by the Oak code so no deduplication can be performed
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
         String content = getRandomString(1024*20);
 
         BinaryDirectUpload upload1 = uploadProvider.initiateBinaryUpload(content.getBytes().length, 1);
@@ -468,19 +468,19 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         BinaryDirectUpload upload2 = uploadProvider.initiateBinaryUpload(content.getBytes().length, 1);
         assertNotNull(upload2);
 
-        assertNotEquals(upload1.getURLs().iterator().next().toString(),
-                upload2.getURLs().iterator().next().toString());
+        assertNotEquals(upload1.getURIs().iterator().next().toString(),
+                upload2.getURIs().iterator().next().toString());
     }
 
     // D3 - do not delete directly => copy nt:file node, delete one, ensure binary still there
     @Test
     public void testBinaryNotDeletedWithNode() throws Exception {
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
         String content = getRandomString(1024*20);
 
         BinaryDirectUpload upload = uploadProvider.initiateBinaryUpload(content.getBytes().length, 1);
-        int code = httpPut(upload.getURLs().iterator().next(),
+        int code = httpPut(upload.getURIs().iterator().next(),
                 content.getBytes().length,
                 new ByteArrayInputStream(content.getBytes()));
         assertTrue(isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
@@ -504,7 +504,7 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     @Test
     public void testBinaryOnlyPersistedInNodeStoreAfterUploadIsCompleted() throws Exception {
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
         String content = getRandomString(1024*20);
 
         getOrCreateNtFile(adminSession, FILE_PATH);
@@ -524,7 +524,7 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         }
         catch (PathNotFoundException e) { }
 
-        int code = httpPut(upload.getURLs().iterator().next(),
+        int code = httpPut(upload.getURIs().iterator().next(),
                 content.getBytes().length,
                 new ByteArrayInputStream(content.getBytes()));
         assertTrue(isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
@@ -557,7 +557,7 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     @Test
     public void testInitiateHttpUploadWithZeroSizeFails() throws RepositoryException {
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
         try {
             uploadProvider.initiateBinaryUpload(0, 1);
             fail();
@@ -566,9 +566,9 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     }
 
     @Test
-    public void testInitiateHttpUploadWithZeroUrlsFails() throws RepositoryException {
+    public void testInitiateHttpUploadWithZeroURIsFails() throws RepositoryException {
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
         try {
             uploadProvider.initiateBinaryUpload(1024 * 20, 0);
             fail();
@@ -577,10 +577,10 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     }
 
     @Test
-    public void testInitiateHttpUploadWithUnsupportedNegativeNumberUrlsFails()
+    public void testInitiateHttpUploadWithUnsupportedNegativeNumberURIsFails()
         throws RepositoryException {
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
         try {
             uploadProvider.initiateBinaryUpload(1024 * 20, -2);
             fail();
@@ -589,12 +589,12 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     }
 
     @Test
-    public void testInitiateHttpUploadWithUnlimitedUrls() throws RepositoryException {
+    public void testInitiateHttpUploadWithUnlimitedURIs() throws RepositoryException {
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
         BinaryDirectUpload upload = uploadProvider.initiateBinaryUpload(1024 * 1024 * 1024, -1);
         assertNotNull(upload);
-        assertTrue(Iterables.size(upload.getURLs()) > 50);
+        assertTrue(Iterables.size(upload.getURIs()) > 50);
         // 50 is our default expected client max -
         // this is to make sure we will give as many as needed
         // if the client doesn't specify their own limit
@@ -603,16 +603,16 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     @Test
     public void testInitiateHttpUploadLargeSinglePut() throws RepositoryException {
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
         BinaryDirectUpload upload = uploadProvider.initiateBinaryUpload(1024 * 1024 * 100, 1);
         assertNotNull(upload);
-        assertEquals(1, Iterables.size(upload.getURLs()));
+        assertEquals(1, Iterables.size(upload.getURIs()));
     }
 
     @Test
     public void testInitiateHttpUploadTooLargeForSinglePut() throws RepositoryException {
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
         try {
             uploadProvider.initiateBinaryUpload(1024L * 1024L * 1024L * 10L, 1);
             fail();
@@ -623,7 +623,7 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     @Test
     public void testInitiateHttpUploadTooLargeForUpload() throws RepositoryException {
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
         try {
             uploadProvider.initiateBinaryUpload(1024L * 1024L * 1024L * 1024L * 10L, -1);
             fail();
@@ -632,11 +632,26 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     }
 
     @Test
-    public void testInitiateHttpUploadTooLargeForRequestedNumUrls() throws RepositoryException {
+    public void testInitiateHttpUploadTooLargeForRequestedNumURIs() throws RepositoryException {
         getConfigurableHttpDataRecordProvider()
-                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
         try {
             uploadProvider.initiateBinaryUpload(1024L * 1024L * 1024L * 10L, 10);
+            fail();
+        }
+        catch (IllegalArgumentException e) { }
+    }
+
+    @Test
+    public void testCompleteHttpUploadWithInvalidTokenFails() throws RepositoryException {
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURIExpirySeconds(REGULAR_WRITE_EXPIRY);
+
+        BinaryDirectUpload upload = uploadProvider.initiateBinaryUpload(256, 10);
+        assertNotNull(upload);
+
+        try {
+            uploadProvider.completeBinaryUpload(upload.getUploadToken() + "X");
             fail();
         }
         catch (IllegalArgumentException e) { }
